--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,6 +70,7 @@ body {
     font-family: 'PT Serif', serif;
     margin-top: 5vh;
     text-align: center;
+    font-weight: 800;
 }
 
 .main-img {
@@ -80,4 +81,61 @@ body {
 .background {
     z-index: -1;
     opacity: 0.7;
+}
+
+.mySlides {
+    margin: 0 auto;
+    height: 30vw;
+    position: relative;
+    display: flex;
+    flex-direction: vertical;
+    justify-content: space-around;
+}
+
+.mySlides .slide-img {
+    max-width: 30vw;
+}
+
+a:visited {
+    color: white;
+}
+
+a:link {
+    color: white;
+}
+
+a:hover {
+    color: hotpink;
+}
+
+.bottom-bar {
+    background-color: #1a1a1a;
+    height: 35vh;
+    margin-top: 5vh;
+    color: white;
+    font-size: 20px;
+    padding: 50px 100px;
+}
+
+.list1 {
+    float: left;
+    padding: 10px;
+    line-height: 5px;
+    position: absolute;
+}
+.list2 {
+    margin-left: 15vw;
+    padding-top: 10px;
+    line-height: 5px;
+    position: absolute;
+}
+.social {
+    float: right;
+}
+
+.list3 {
+    float: right;
+    margin-left: 20vw;
+    padding-top: 10px;
+    margin-right: 10vw;
 }
