--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,6 +136,6 @@ a:hover {
 .list3 {
     float: right;
     margin-left: 20vw;
-    padding-top: 10px;
+    margin-top: -5px;
     margin-right: 10vw;
 }
